--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-NEXT_PUBLIC_API_NAME=Wings of Essence
+NEXT_PUBLIC_APP_NAME=Wings of Escape
 NEXT_PUBLIC_SERVER_URL=http://localhost:3000
 NEXT_PUBLIC_APP_VERSION=1.0.3
 
@@ -9,8 +9,8 @@ NEXT_PUBLIC_APP_VERSION=1.0.3
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-# The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres 
-# server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the 
+# The following `prisma+postgres` URL is similar to the URL produced by running a local Prisma Postgres
+# server with the `prisma dev` CLI command, when not choosing any non-default ports or settings. The API key, unlike the
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgres://neondb_owner:npg_SIz9oxDgu6eq@ep-sweet-dream-adsjnbjn-pooler.c-2.us-east-1.aws.neon.tech/neondb?sslmode=require"
