--- a/package.json
+++ b/package.json
@@ -15,14 +15,15 @@
     "@sanity/client": "^7.8.2",
     "@sanity/image-url": "^1.1.0",
     "@sanity/vision": "^4.5.0",
+    "dotenv": "^17.2.1",
     "next": "15.3.5",
     "next-sanity": "^10.0.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "resend": "^6.4.2",
     "sanity": "^4.5.0",
     "styled-components": "^6.1.19",
-    "ws": "^8.18.3",
-    "dotenv": "^17.2.1"
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
